# video-to-sound

./: .gitignore  CMakeLists.txt
src/: main.cpp
